refactor: refatoração em assinador jar